feat: 어떤 버튼인지 스크린리더기에게 알려줄 수 있는 aria-label 추가

--- a/carousel.html
+++ b/carousel.html
@@ -198,8 +198,16 @@
         </li>
       </ul>
       <div class="arrow-button-list">
-        <button type="button" class="prev-arrow-button"></button>
-        <button type="button" class="next-arrow-button"></button>
+        <button
+          type="button"
+          class="prev-arrow-button"
+          aria-label="이전"
+        ></button>
+        <button
+          type="button"
+          class="next-arrow-button"
+          aria-label="다음"
+        ></button>
       </div>
     </div>
   </body>
