refactor: 사용하지 않는 console.log및 주석 제거

--- a/carousel.html
+++ b/carousel.html
@@ -9,7 +9,7 @@
   <body>
     <h1>지금 떠나기 좋은 여행</h1>
     <div class="carousel-container">
-      <ul class="carousel-list" role="tablist">
+      <ul class="carousel-list">
         <li class="carousel-item" data-id="0">
           <a
             target="_blank"
