refactor: 명시적인 class를 사용한다

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
       </div>
     </div>
     <div id="snackbar" role="status"></div>
-    <div id="aria-live-polite-message" class="aria-hidden" aria-live="polite"></div>
-    <div id="aria-live-assertive-message" class="aria-hidden" aria-live="assertive"></div>
+    <div id="aria-live-polite-message" class="hidden-for-aria-live" aria-live="polite"></div>
+    <div id="aria-live-assertive-message" class="hidden-for-aria-live" aria-live="assertive"></div>
   </body>
 </html>
