feat: carousel 동작 구현

--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
       <h1 id="suggestion-carousel-title">지금 떠나기 좋은 여행</h1>
       <section class="carousel" aria-labelledby="suggestion-carousel-title">
         <div class="controls-container">
-          <button class="control prev" aria-label="이전">
+          <button
+            class="control prev default-button-container"
+            aria-label="이전"
+          >
             <span aria-hidden="true">‹</span>
           </button>
-          <button class="control next" aria-label="다음">
+          <button
+            class="control next default-button-container"
+            aria-label="다음"
+          >
             <span aria-hidden="true">›</span>
           </button>
         </div>
@@ -115,7 +121,7 @@
           </li>
           <li class="carousel-content">
             <img
-              src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HNL-list-pc.jpg"
+              src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FCO-list-pc.jpg"
               alt=""
               class="carousel-content-image"
             />
