feat: 가격 단위 스크린리더가 정상적으로 읽도록 조정

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
           <button
             class="control prev default-button-container"
             aria-label="이전"
+            aria-disabled="true"
           >
             <span aria-hidden="true">‹</span>
           </button>
           <button
             class="control next default-button-container"
             aria-label="다음"
+            aria-disabled="true"
           >
             <span aria-hidden="true">›</span>
           </button>
@@ -38,7 +40,9 @@
               <h2>서울/인천<span aria-hidden="true"> - </span>두바이</h2>
               <p>일반석 왕복</p>
               <p class="price">
-                KRW 1,158,000 <span aria-hidden="true">~</span>
+                <span aria-hidden="true">KRW</span> 1,158,000
+                <span aria-hidden="true">~</span>
+                <span class="hidden">원부터</span>
               </p>
             </a>
           </li>
@@ -54,7 +58,11 @@
             >
               <h2>서울/인천<span aria-hidden="true"> - </span>후쿠오카</h2>
               <p>일반석 왕복</p>
-              <p class="price">KRW 340,400 <span aria-hidden="true">~</span></p>
+              <p class="price">
+                <span aria-hidden="true">KRW</span> 340,400
+                <span aria-hidden="true">~</span>
+                <span class="hidden">원부터</span>
+              </p>
             </a>
           </li>
           <li class="carousel-content">
@@ -69,7 +77,11 @@
             >
               <h2>서울/인천<span aria-hidden="true"> - </span>푸껫</h2>
               <p>일반석 왕복</p>
-              <p class="price">KRW 704,200 <span aria-hidden="true">~</span></p>
+              <p class="price">
+                <span aria-hidden="true">KRW</span> 704,200
+                <span aria-hidden="true">~</span>
+                <span class="hidden">원부터</span>
+              </p>
             </a>
           </li>
           <li class="carousel-content">
@@ -84,7 +96,11 @@
             >
               <h2>서울/인천<span aria-hidden="true"> - </span>치앙마이</h2>
               <p>일반석 왕복</p>
-              <p class="price">KRW 839,200 <span aria-hidden="true">~</span></p>
+              <p class="price">
+                <span aria-hidden="true">KRW</span> 839,200
+                <span aria-hidden="true">~</span>
+                <span class="hidden">원부터</span>
+              </p>
             </a>
           </li>
           <li class="carousel-content">
@@ -100,7 +116,9 @@
               <h2>서울/인천<span aria-hidden="true"> - </span>바르셀로나</h2>
               <p>일반석 왕복</p>
               <p class="price">
-                KRW 1,546,300 <span aria-hidden="true">~</span>
+                <span aria-hidden="true">KRW</span> 1,546,300
+                <span aria-hidden="true">~</span>
+                <span class="hidden">원부터</span>
               </p>
             </a>
           </li>
@@ -116,7 +134,11 @@
             >
               <h2>서울/인천<span aria-hidden="true"> - </span>하노이</h2>
               <p>일반석 왕복</p>
-              <p class="price">KRW 527,400 <span aria-hidden="true">~</span></p>
+              <p class="price">
+                <span aria-hidden="true">KRW</span> 527,400
+                <span aria-hidden="true">~</span>
+                <span class="hidden">원부터</span>
+              </p>
             </a>
           </li>
           <li class="carousel-content">
@@ -135,7 +157,9 @@
               </h2>
               <p>일반석 왕복</p>
               <p class="price">
-                KRW 1,454,300 <span aria-hidden="true">~</span>
+                <span aria-hidden="true">KRW</span> 1,454,300
+                <span aria-hidden="true">~</span>
+                <span class="hidden">원부터</span>
               </p>
             </a>
           </li>
@@ -154,7 +178,9 @@
               </h2>
               <p>일반석 왕복</p>
               <p class="price">
-                KRW 1,244,900 <span aria-hidden="true">~</span>
+                <span aria-hidden="true">KRW</span> 1,244,900
+                <span aria-hidden="true">~</span>
+                <span class="hidden">원부터</span>
               </p>
             </a>
           </li>
