--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <title>승객 선택 미션 입니다.</title>
+    <meta name="description" content="우아한테크코스 웹접근성 미션" />
+    <title>미션2 Carousel: 지금 떠나기 좋은 여행</title>
   </head>
   <body>
     <div id="root"></div>
