--- a/index.html
+++ b/index.html
@@ -8,51 +8,9 @@
     <link rel="stylesheet" href="./src/css/index.css" />
   </head>
   <body>
-    <section>
-      <h1>승객 선택</h1>
-      <article class="passenger-title">
-        <h2>성인</h2>
-        <button
-          class="tooltip button"
-          type="button"
-          aria-controls="tooltip-content"
-          aria-label="성인 기준 상세 안내"
-          aria-hidden="false"
-        >
-          ?
-        </button>
-        <div class="tooltip-content sr-only" aria-live="polite">
-          <span>국제선 만 12세 이상, 국내선 만 13세 이상</span>
-        </div>
-      </article>
-      <div>
-        <button
-          class="decrement-button button"
-          type="button"
-          aria-label="성인 탑승자 한명 줄이기"
-          aria-atomic="true"
-        >
-          -
-        </button>
-        <input
-          id="passenger-amount-input"
-          type="tel"
-          value="1"
-          min="1"
-          max="3"
-          aria-label="성인"
-        />
-        <button
-          class="increment-button button"
-          type="button"
-          aria-label="성인 탑승자 한명 늘리기"
-          aria-atomic="true"
-        >
-          +
-        </button>
-      </div>
-      <div id="input-status" class="sr-only" role="status"></div>
-    </section>
-    <script src="./src/index.js"></script>
+    <div class="container">
+      <a href="spin.html" class="menu">step 1</a>
+      <a href="carousel.html" class="menu">step 2</a>
+    </div>
   </body>
 </html>
