feat: carousel html 구현

--- a/spin.html
+++ b/spin.html
@@ -53,6 +53,6 @@
       </div>
       <div id="input-status" class="sr-only" role="status"></div>
     </section>
-    <script src="./src/js/spin.js"></script>
+    <script type="module" src="./src/js/spin.js"></script>
   </body>
 </html>
