--- a/carousel.html
+++ b/carousel.html
@@ -10,18 +10,151 @@
   <body>
     <section>
       <h1>지금 떠나기 좋은 여행</h1>
-      <article>
+      <article class="item-container">
         <ul class="item-list">
-          <li class="item1 item">
-            <a class="content-wrapper">
-              <p class="location">서울/인천 - 두바이</p>
-              <p class="seat">일반석 왕복</p>
-              <p class="price">KRW 1,121,600 ~</p>
+          <li class="item" data-id="0">
+            <a
+              class="item-link"
+              href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=DXB&duration=7&cabin=Y"
+            >
+              <img
+                src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/DXB-list-pc.jpg"
+                alt=""
+                class="item-image"
+              />
+              <div class="content-wrapper">
+                <p class="location">서울/인천 - 두바이</p>
+                <p class="seat">일반석 왕복</p>
+                <p class="price">KRW 1,121,600 ~</p>
+              </div>
+            </a>
+          </li>
+          <li class="item" data-id="1">
+            <a
+              class="item-link"
+              href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FUK&cabin=Y&tripType=RT&duration=7"
+            >
+              <img
+                src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FUK-list-pc.jpg"
+                alt=""
+                class="item-image"
+              />
+              <div class="content-wrapper">
+                <p class="location">서울/인천 - 후쿠오카</p>
+                <p class="seat">일반석 왕복</p>
+                <p class="price">KRW 340,400 ~</p>
+              </div>
+            </a>
+          </li>
+          <li class="item" data-id="2">
+            <a
+              class="item-link"
+              href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HKT&cabin=Y&tripType=RT&duration=7"
+            >
+              <img
+                src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HKT-list-pc.jpg"
+                alt=""
+                class="item-image"
+              />
+              <div class="content-wrapper">
+                <p class="location">서울/인천 - 푸껫</p>
+                <p class="seat">일반석 왕복</p>
+                <p class="price">KRW 704,200 ~</p>
+              </div>
+            </a>
+          </li>
+          <li class="item" data-id="3">
+            <a
+              class="item-link"
+              href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=CNX&duration=7&cabin=Y"
+            >
+              <img
+                src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/CNX-list-pc.jpg"
+                alt=""
+                class="item-image"
+              />
+              <div class="content-wrapper">
+                <p class="location">서울/인천 - 치앙마이</p>
+                <p class="seat">일반석 왕복</p>
+                <p class="price">KRW 839,100 ~</p>
+              </div>
+            </a>
+          </li>
+          <li class="item" data-id="4">
+            <a
+              class="item-link"
+              href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=BCN&cabin=Y&tripType=RT&duration=7"
+            >
+              <img
+                src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/BCN-list-pc.jpg"
+                alt=""
+                class="item-image"
+              />
+              <div class="content-wrapper">
+                <p class="location">서울/인천 - 바르셀로나</p>
+                <p class="seat">일반석 왕복</p>
+                <p class="price">KRW 1,546,300 ~</p>
+              </div>
+            </a>
+          </li>
+          <li class="item" data-id="5">
+            <a
+              class="item-link"
+              href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HAN&cabin=Y&tripType=RT&duration=7"
+            >
+              <img
+                src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HAN-list-pc.jpg"
+                alt=""
+                class="item-image"
+              />
+              <div class="content-wrapper">
+                <p class="location">서울/인천 - 하노이</p>
+                <p class="seat">일반석 왕복</p>
+                <p class="price">KRW 527,500 ~</p>
+              </div>
+            </a>
+          </li>
+          <li class="item" data-id="6">
+            <a
+              class="item-link"
+              href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FCO&cabin=Y&tripType=RT&duration=7"
+            >
+              <img
+                src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FCO-list-pc.jpg"
+                alt=""
+                class="item-image"
+              />
+              <div class="content-wrapper">
+                <p class="location">서울/인천 - 로마/레오나르도 다빈치</p>
+                <p class="seat">일반석 왕복</p>
+                <p class="price">KRW 1,454,200 ~</p>
+              </div>
+            </a>
+          </li>
+          <li class="item" data-id="7">
+            <a
+              class="item-link"
+              href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HNL&cabin=Y&tripType=RT&duration=7"
+            >
+              <img
+                src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HNL-list-pc.jpg"
+                alt=""
+                class="item-image"
+              />
+              <div class="content-wrapper">
+                <p class="location">서울/인천 - 호놀룰루 (하와이)</p>
+                <p class="seat">일반석 왕복</p>
+                <p class="price">KRW 1,244,900 ~</p>
+              </div>
             </a>
           </li>
         </ul>
+        <div class="button-wrapper">
+          <button class="prev-button button"></button>
+          <button class="next-button button"></button>
+        </div>
       </article>
     </section>
-    <script src="./src/js/carousel.js"></script>
+    <script type="module" src="./src/js/carousel.js"></script>
   </body>
 </html>
