fix: 양쪽 끝 슬라이드 예외처리

--- a/carousel.html
+++ b/carousel.html
@@ -14,6 +14,7 @@
         <li class="slide">
           <a
             href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=DXB&cabin=Y&tripType=RT&duration=7"
+            class="slide__link"
             ><img
               src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/DXB-list-pc.jpg"
               alt="Photo 1"
@@ -22,6 +23,7 @@
         <li class="slide">
           <a
             href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FUK&cabin=Y&tripType=RT&duration=7"
+            class="slide__link"
           >
             <img
               src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FUK-list-pc.jpg"
@@ -31,6 +33,7 @@
         <li class="slide">
           <a
             href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HKT&cabin=Y&tripType=RT&duration=7"
+            class="slide__link"
           >
             <img
               src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HKT-list-pc.jpg"
@@ -40,6 +43,7 @@
         <li class="slide">
           <a
             href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=CNX&cabin=Y&tripType=RT&duration=7"
+            class="slide__link"
           >
             <img
               src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/CNX-list-pc.jpg"
@@ -50,6 +54,7 @@
         <li class="slide">
           <a
             href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=BCN&cabin=Y&tripType=RT&duration=7"
+            class="slide__link"
           >
             <img
               src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/BCN-list-pc.jpg"
@@ -59,6 +64,7 @@
         <li class="slide">
           <a
             href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HAN&cabin=Y&tripType=RT&duration=7"
+            class="slide__link"
           >
             <img
               src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HAN-list-pc.jpg"
@@ -68,6 +74,7 @@
         <li class="slide">
           <a
             href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FCO&duration=7&cabin=Y"
+            class="slide__link"
           >
             <img
               src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FCO-list-pc.jpg"
@@ -77,6 +84,7 @@
         <li class="slide">
           <a
             href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HNL&cabin=Y&tripType=RT&duration=7"
+            class="slide__link"
           >
             <img
               src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HNL-list-pc.jpg"
