feat: aria-label 추가

--- a/carousel.html
+++ b/carousel.html
@@ -150,8 +150,16 @@
           </li>
         </ul>
         <div class="button-wrapper">
-          <button class="prev-button button"></button>
-          <button class="next-button button"></button>
+          <button
+            class="prev-button button"
+            aria-label="이전"
+            aria-atomic="true"
+          ></button>
+          <button
+            class="next-button button"
+            aria-label="다음"
+            aria-atomic="true"
+          ></button>
         </div>
       </article>
     </section>
