feat: 좌우 슬라이트 버튼 추가

--- a/carousel.html
+++ b/carousel.html
@@ -91,8 +91,8 @@
               alt="Photo 8"
           /></a>
         </li>
-        <button class="slider__btn slider__btn--left">&larr;</button>
-        <button class="slider__btn slider__btn--right">&rarr;</button>
+        <button class="slider__btn slider__btn--left"></button>
+        <button class="slider__btn slider__btn--right"></button>
       </ul>
     </section>
 
