--- a/carousel.html
+++ b/carousel.html
@@ -25,7 +25,8 @@
               <div class="content-wrapper">
                 <p class="location">서울/인천 - 두바이</p>
                 <p class="seat">일반석 왕복</p>
-                <p class="price">KRW 1,121,600 ~</p>
+                <span class="price">KRW 1,121,600</span>
+                <span class="price" aria-hidden="true">~</span>
               </div>
             </a>
           </li>
@@ -42,7 +43,8 @@
               <div class="content-wrapper">
                 <p class="location">서울/인천 - 후쿠오카</p>
                 <p class="seat">일반석 왕복</p>
-                <p class="price">KRW 340,400 ~</p>
+                <span class="price">KRW 340,400</span>
+                <span class="price" aria-hidden="true">~</span>
               </div>
             </a>
           </li>
@@ -59,7 +61,8 @@
               <div class="content-wrapper">
                 <p class="location">서울/인천 - 푸껫</p>
                 <p class="seat">일반석 왕복</p>
-                <p class="price">KRW 704,200 ~</p>
+                <span class="price">KRW 704,200</span>
+                <span class="price" aria-hidden="true">~</span>
               </div>
             </a>
           </li>
@@ -76,7 +79,8 @@
               <div class="content-wrapper">
                 <p class="location">서울/인천 - 치앙마이</p>
                 <p class="seat">일반석 왕복</p>
-                <p class="price">KRW 839,100 ~</p>
+                <span class="price">KRW 839,100</span>
+                <span class="price" aria-hidden="true">~</span>
               </div>
             </a>
           </li>
@@ -93,7 +97,8 @@
               <div class="content-wrapper">
                 <p class="location">서울/인천 - 바르셀로나</p>
                 <p class="seat">일반석 왕복</p>
-                <p class="price">KRW 1,546,300 ~</p>
+                <span class="price">KRW 1,546,300</span>
+                <span class="price" aria-hidden="true">~</span>
               </div>
             </a>
           </li>
@@ -110,7 +115,8 @@
               <div class="content-wrapper">
                 <p class="location">서울/인천 - 하노이</p>
                 <p class="seat">일반석 왕복</p>
-                <p class="price">KRW 527,500 ~</p>
+                <span class="price">KRW 527,500</span>
+                <span class="price" aria-hidden="true">~</span>
               </div>
             </a>
           </li>
@@ -127,7 +133,8 @@
               <div class="content-wrapper">
                 <p class="location">서울/인천 - 로마/레오나르도 다빈치</p>
                 <p class="seat">일반석 왕복</p>
-                <p class="price">KRW 1,454,200 ~</p>
+                <span class="price">KRW 1,454,200</span>
+                <span class="price" aria-hidden="true">~</span>
               </div>
             </a>
           </li>
@@ -144,7 +151,8 @@
               <div class="content-wrapper">
                 <p class="location">서울/인천 - 호놀룰루 (하와이)</p>
                 <p class="seat">일반석 왕복</p>
-                <p class="price">KRW 1,244,900 ~</p>
+                <span class="price">KRW 1,244,900</span>
+                <span class="price" aria-hidden="true">~</span>
               </div>
             </a>
           </li>
