fix: 버튼 태그 위치 수정 - ul 태그 밖으로 수정

--- a/carousel.html
+++ b/carousel.html
@@ -10,131 +10,141 @@
   <body>
     <section>
       <h1 class="section__header">지금 떠나기 좋은 여행</h1>
-      <ul class="slider">
-        <li class="slide">
-          <a
-            href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=DXB&cabin=Y&tripType=RT&duration=7"
-            class="slide-link"
-            ><img
-              src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/DXB-list-pc.jpg"
-              alt="Photo 1"
-          /></a>
-          <div class="slide-desc">
-            <p class="slide-desc__location">서울/인천 - 두바이</p>
-            <p class="slide-desc__type">일반석 왕복</p>
-            <p class="slide-desc__price">KRW 1,158,000 ~</p>
-          </div>
-        </li>
-        <li class="slide">
-          <a
-            href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FUK&cabin=Y&tripType=RT&duration=7"
-            class="slide-link"
-          >
-            <img
-              src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FUK-list-pc.jpg"
-              alt="Photo 2"
-          /></a>
-          <div class="slide-desc">
-            <p class="slide-desc__location">서울/인천 - 후쿠오카</p>
-            <p class="slide-desc__type">일반석 왕복</p>
-            <p class="slide-desc__price">KRW 340,400 ~</p>
-          </div>
-        </li>
-        <li class="slide">
-          <a
-            href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HKT&cabin=Y&tripType=RT&duration=7"
-            class="slide-link"
-          >
-            <img
-              src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HKT-list-pc.jpg"
-              alt="Photo 3"
-          /></a>
-          <div class="slide-desc">
-            <p class="slide-desc__location">서울/인천 - 푸껫</p>
-            <p class="slide-desc__type">일반석 왕복</p>
-            <p class="slide-desc__price">KRW 704,100 ~</p>
-          </div>
-        </li>
-        <li class="slide">
-          <a
-            href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=CNX&cabin=Y&tripType=RT&duration=7"
-            class="slide-link"
-          >
-            <img
-              src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/CNX-list-pc.jpg"
-              alt="Photo 4"
-          /></a>
-          <div class="slide-desc">
-            <p class="slide-desc__location">서울/인천 - 치앙마이</p>
-            <p class="slide-desc__type">일반석 왕복</p>
-            <p class="slide-desc__price">KRW 839,100 ~</p>
-          </div>
-        </li>
-        <li class="slide">
-          <a
-            href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=BCN&cabin=Y&tripType=RT&duration=7"
-            class="slide-link"
-          >
-            <img
-              src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/BCN-list-pc.jpg"
-              alt="Photo 5"
-          /></a>
-          <div class="slide-desc">
-            <p class="slide-desc__location">서울/인천 - 바르셀로나</p>
-            <p class="slide-desc__type">일반석 왕복</p>
-            <p class="slide-desc__price">KRW 1,546,300 ~</p>
-          </div>
-        </li>
-        <li class="slide">
-          <a
-            href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HAN&cabin=Y&tripType=RT&duration=7"
-            class="slide-link"
-          >
-            <img
-              src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HAN-list-pc.jpg"
-              alt="Photo 6"
-          /></a>
-          <div class="slide-desc">
-            <p class="slide-desc__location">서울/인천 - 하노이</p>
-            <p class="slide-desc__type">일반석 왕복</p>
-            <p class="slide-desc__price">KRW 527,500 ~</p>
-          </div>
-        </li>
-        <li class="slide">
-          <a
-            href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FCO&duration=7&cabin=Y"
-            class="slide-link"
-          >
-            <img
-              src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FCO-list-pc.jpg"
-              alt="Photo 7"
-          /></a>
-          <div class="slide-desc">
-            <p class="slide-desc__location">
-              서울/인천 - 로마/레오나르도 다빈치
-            </p>
-            <p class="slide-desc__type">일반석 왕복</p>
-            <p class="slide-desc__price">KRW 1,454,200 ~</p>
-          </div>
-        </li>
-        <li class="slide">
-          <a
-            href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HNL&cabin=Y&tripType=RT&duration=7"
-            class="slide-link"
-          >
-            <img
-              src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HNL-list-pc.jpg"
-              alt="Photo 8"
-          /></a>
-          <div class="slide-desc">
-            <p class="slide-desc__location">서울/인천 - 호놀룰루 (하와이)</p>
-            <p class="slide-desc__type">일반석 왕복</p>
-            <p class="slide-desc__price">KRW 1,244,900 ~</p>
-          </div>
-        </li>
-        <button class="slider-btn slider-btn__left"></button>
-        <button class="slider-btn slider-btn__right"></button>
-      </ul>
+      <div class="slider-container">
+        <ul class="slider">
+          <li class="slide">
+            <a
+              href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=DXB&cabin=Y&tripType=RT&duration=7"
+              class="slide-link"
+              target="_blank"
+              ><img
+                src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/DXB-list-pc.jpg"
+                alt=""
+            /></a>
+            <div class="slide-desc">
+              <p class="slide-desc__location">서울/인천 - 두바이</p>
+              <p class="slide-desc__type">일반석 왕복</p>
+              <p class="slide-desc__price">KRW 1,158,000 ~</p>
+            </div>
+          </li>
+          <li class="slide">
+            <a
+              href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FUK&cabin=Y&tripType=RT&duration=7"
+              class="slide-link"
+              target="_blank"
+            >
+              <img
+                src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FUK-list-pc.jpg"
+                alt=""
+            /></a>
+            <div class="slide-desc">
+              <p class="slide-desc__location">서울/인천 - 후쿠오카</p>
+              <p class="slide-desc__type">일반석 왕복</p>
+              <p class="slide-desc__price">KRW 340,400 ~</p>
+            </div>
+          </li>
+          <li class="slide">
+            <a
+              href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HKT&cabin=Y&tripType=RT&duration=7"
+              class="slide-link"
+              target="_blank"
+            >
+              <img
+                src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HKT-list-pc.jpg"
+                alt=""
+            /></a>
+            <div class="slide-desc">
+              <p class="slide-desc__location">서울/인천 - 푸껫</p>
+              <p class="slide-desc__type">일반석 왕복</p>
+              <p class="slide-desc__price">KRW 704,100 ~</p>
+            </div>
+          </li>
+          <li class="slide">
+            <a
+              href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=CNX&cabin=Y&tripType=RT&duration=7"
+              class="slide-link"
+              target="_blank"
+            >
+              <img
+                src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/CNX-list-pc.jpg"
+                alt=""
+            /></a>
+            <div class="slide-desc">
+              <p class="slide-desc__location">서울/인천 - 치앙마이</p>
+              <p class="slide-desc__type">일반석 왕복</p>
+              <p class="slide-desc__price">KRW 839,100 ~</p>
+            </div>
+          </li>
+          <li class="slide">
+            <a
+              href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=BCN&cabin=Y&tripType=RT&duration=7"
+              class="slide-link"
+              target="_blank"
+            >
+              <img
+                src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/BCN-list-pc.jpg"
+                alt=""
+            /></a>
+            <div class="slide-desc">
+              <p class="slide-desc__location">서울/인천 - 바르셀로나</p>
+              <p class="slide-desc__type">일반석 왕복</p>
+              <p class="slide-desc__price">KRW 1,546,300 ~</p>
+            </div>
+          </li>
+          <li class="slide">
+            <a
+              href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HAN&cabin=Y&tripType=RT&duration=7"
+              class="slide-link"
+              target="_blank"
+            >
+              <img
+                src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HAN-list-pc.jpg"
+                alt=""
+            /></a>
+            <div class="slide-desc">
+              <p class="slide-desc__location">서울/인천 - 하노이</p>
+              <p class="slide-desc__type">일반석 왕복</p>
+              <p class="slide-desc__price">KRW 527,500 ~</p>
+            </div>
+          </li>
+          <li class="slide">
+            <a
+              href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FCO&duration=7&cabin=Y"
+              class="slide-link"
+              target="_blank"
+            >
+              <img
+                src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FCO-list-pc.jpg"
+                alt=""
+            /></a>
+            <div class="slide-desc">
+              <p class="slide-desc__location">
+                서울/인천 - 로마/레오나르도 다빈치
+              </p>
+              <p class="slide-desc__type">일반석 왕복</p>
+              <p class="slide-desc__price">KRW 1,454,200 ~</p>
+            </div>
+          </li>
+          <li class="slide">
+            <a
+              href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HNL&cabin=Y&tripType=RT&duration=7"
+              class="slide-link"
+              target="_blank"
+            >
+              <img
+                src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HNL-list-pc.jpg"
+                alt=""
+            /></a>
+            <div class="slide-desc">
+              <p class="slide-desc__location">서울/인천 - 호놀룰루 (하와이)</p>
+              <p class="slide-desc__type">일반석 왕복</p>
+              <p class="slide-desc__price">KRW 1,244,900 ~</p>
+            </div>
+          </li>
+        </ul>
+        <button class="slider-btn slider-btn__left" aria-label="이전"></button>
+        <button class="slider-btn slider-btn__right" aria-label="다음"></button>
+      </div>
     </section>
     <script src="src/carousel.js"></script>
   </body>
