feat: aria-dis추가

--- a/carousel.html
+++ b/carousel.html
@@ -17,10 +17,12 @@
               href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=DXB&cabin=Y&tripType=RT&duration=7"
               class="slide-link"
               target="_blank"
+              title=""
               ><img
                 src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/DXB-list-pc.jpg"
                 alt=""
-            /></a>
+              />
+            </a>
             <div class="slide-desc">
               <p class="slide-desc__location">서울/인천 - 두바이</p>
               <p class="slide-desc__type">일반석 왕복</p>
@@ -36,7 +38,8 @@
               <img
                 src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FUK-list-pc.jpg"
                 alt=""
-            /></a>
+              />
+            </a>
             <div class="slide-desc">
               <p class="slide-desc__location">서울/인천 - 후쿠오카</p>
               <p class="slide-desc__type">일반석 왕복</p>
@@ -52,7 +55,8 @@
               <img
                 src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HKT-list-pc.jpg"
                 alt=""
-            /></a>
+              />
+            </a>
             <div class="slide-desc">
               <p class="slide-desc__location">서울/인천 - 푸껫</p>
               <p class="slide-desc__type">일반석 왕복</p>
@@ -68,7 +72,8 @@
               <img
                 src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/CNX-list-pc.jpg"
                 alt=""
-            /></a>
+              />
+            </a>
             <div class="slide-desc">
               <p class="slide-desc__location">서울/인천 - 치앙마이</p>
               <p class="slide-desc__type">일반석 왕복</p>
@@ -84,7 +89,8 @@
               <img
                 src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/BCN-list-pc.jpg"
                 alt=""
-            /></a>
+              />
+            </a>
             <div class="slide-desc">
               <p class="slide-desc__location">서울/인천 - 바르셀로나</p>
               <p class="slide-desc__type">일반석 왕복</p>
@@ -100,7 +106,8 @@
               <img
                 src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HAN-list-pc.jpg"
                 alt=""
-            /></a>
+              />
+            </a>
             <div class="slide-desc">
               <p class="slide-desc__location">서울/인천 - 하노이</p>
               <p class="slide-desc__type">일반석 왕복</p>
@@ -116,7 +123,8 @@
               <img
                 src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FCO-list-pc.jpg"
                 alt=""
-            /></a>
+              />
+            </a>
             <div class="slide-desc">
               <p class="slide-desc__location">
                 서울/인천 - 로마/레오나르도 다빈치
@@ -134,7 +142,8 @@
               <img
                 src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HNL-list-pc.jpg"
                 alt=""
-            /></a>
+              />
+            </a>
             <div class="slide-desc">
               <p class="slide-desc__location">서울/인천 - 호놀룰루 (하와이)</p>
               <p class="slide-desc__type">일반석 왕복</p>
