feat: 기본 캐러셀 기능 구현

--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,8 @@
               -
             </button>
             <input
-              type="tel"
-              id="passenger-amount"
+              type="number"
+              id="passenger-count"
               value="1"
               max="3"
               min="1"
@@ -36,6 +36,20 @@
             />
             <button id="add-passenger" aria-label="성인 탑승자 한명 늘리기">
               +
+            </button>
+          </div>
+        </article>
+      </section>
+      <section>
+        <h3>지금 떠나기 좋은 여행</h3>
+        <article>
+          <div class="carousel-container">
+            <div id="carousel-wrapper"></div>
+            <button id="left-button">
+              <div class="left-arrow"></div>
+            </button>
+            <button id="right-button">
+              <div class="right-arrow"></div>
             </button>
           </div>
         </article>
