feat: 접근성 태그 적용

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
         <h3>지금 떠나기 좋은 여행</h3>
         <article>
           <div class="carousel-container">
-            <div id="carousel-wrapper"></div>
+            <ul id="carousel-wrapper"></ul>
             <button id="left-button">
               <div class="left-arrow"></div>
             </button>
