style: add index.css

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <meta property="og:url" content="https://capable-pixie-ad7eb2.netlify.app/" />
     <meta property="og:title" content="a11y-airline" />
     <meta property="og:description" content="미션: 항공사 웹사이트 컴포넌트의 접근성 높이기" />
+    <link rel="stylesheet" href="index.css"></link>
     <title>a11y-airline</title>
   </head>
   <body>
