refactor: move index.css into index.html

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,24 @@
     <meta property="og:url" content="https://capable-pixie-ad7eb2.netlify.app/" />
     <meta property="og:title" content="a11y-airline" />
     <meta property="og:description" content="미션: 항공사 웹사이트 컴포넌트의 접근성 높이기" />
-    <link rel="stylesheet" href="index.css"></link>
     <title>a11y-airline</title>
+    <style>
+      body {
+        margin: 0;
+        overflow: hidden;
+      }
+
+      ul,
+      li {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+      }
+
+      p {
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
